# cookiecutter-machine-learning

./: .actrc  .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .secrets.baseline  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.html  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  cookiecutter.json  genindex.html  index.html  noxfile.py  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  environment.pickle  index.doctree
.doctrees/reference/: reference.doctree
.github/: CODEOWNERS  pull_request_template.md
.github/actions/install-poetry/: action.yml
.github/workflows/: nox.yml  sphinx-build-and-deploy.yml
_sources/: index.md.txt
docs/: code-of-conduct.md  conf.py  contributing.md  contributing.rst  index.md  index.rst
docs/contributing/: ci-cd.md  documentation.md  pre-commit-hooks.md  testing.md
docs/reference/: hooks.md  reference.md  reference.rst  src.md
hooks/: __init__.py  post_gen_project.py
reference/: reference.html
src/cookiecutter_machine_learning/: __init__.py
tests/: conftest.py  test_folder_structure.py
tests/fixtures/: load_cookiecutter_json.py
tests/hooks/: test_post_gen_project.py
tests/system/: test_folder_structure.py
{{ cookiecutter.repository_name }}/: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  THIRD_PARTY_NOTICES  THIRD_PARTY_NOTICES.md  noxfile.py  pyproject.toml  {% if cookiecutter.license == "MIT" %}LICENSE{% endif %}
{{ cookiecutter.repository_name }}/.github/: CODEOWNERS  pull_request_template.md
{{ cookiecutter.repository_name }}/.github/actions/install-poetry/: action.yml
{{ cookiecutter.repository_name }}/.github/workflows/: cruft-autoupdate.yml  nox.yml  sphinx-build-and-deploy.yml
{{ cookiecutter.repository_name }}/docs/: CONTRIBUTING.md  assumptions.md  assumptions.rst  conf.py  contributing.md  contributing.rst  data_sources.md  data_sources.rst  index.md  index.rst
{{ cookiecutter.repository_name }}/docs/contributing/: ci-cd.md  documentation.md  pre-commit-hooks.md  syncing-with-template.md  testing.md
{{ cookiecutter.repository_name }}/docs/reference/: reference.md  reference.rst  {{ cookiecutter.package_name }}.md
{{ cookiecutter.repository_name }}/exploratory/: README.md  set_exploratory_env.sh
{{ cookiecutter.repository_name }}/exploratory/example/: README.md  example_notebook.ipynb
{{ cookiecutter.repository_name }}/exploratory/example/src/example_package/: __init__.py  hello_world.py
{{ cookiecutter.repository_name }}/exploratory/example/tests/example_package/: test___init__.py  test_hello_world.py
{{ cookiecutter.repository_name }}/notebooks/: example_notebook.ipynb
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/: __init__.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/config/: __init__.py  custom_logger.py  settings.py
{{ cookiecutter.repository_name }}/tests/{{ cookiecutter.package_name }}/config/: test_logger.py
