[tool.poetry]
name = "cookiecutter-machine-learning"
version = "1.4.0"
description = "A cookiecutter template for machine learning projects in Python."
license = "MIT"
authors = ["Eric Young <ESKYoung@users.noreply.github.com>"]
maintainers = ["Eric Young <ESKYoung@users.noreply.github.com>"]
readme = "README.rst"
homepage = "https://ESKYoung.github.io/cookiecutter-machine-learning"
repository = "https://github.com/ESKYoung/cookiecutter-machine-learning"
documentation = "https://ESKYoung.github.io/cookiecutter-machine-learning"
keywords = []
classifiers = []
packages = [
    {include = "cookiecutter_machine_learning", from = "src"},
    {include = "hooks"},
]
include = []
exclude = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cookiecutter = "^2.5.0"
cruft = {extras = ["pyproject"], version = "^2.15.0"}
jinja2-git = "^1.3.0"

[tool.poetry.group.ci-cd]
optional = true

[tool.poetry.group.ci-cd.dependencies]
nox = "^2023.4.22"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pydata-sphinx-theme = "^0.14.4"
Sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.pre-commit]
optional = true

[tool.poetry.group.pre-commit.dependencies]
black = "^23.11.0"
detect-secrets = "^1.4.0"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.12.2"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
isort = "^5.13.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
pre-commit-hooks = "^4.5.0"
safety = "^2.4.0b2"
types-python-slugify = "^8.0.0.3"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest = "^7.4.3"
pytest-cookies = "^0.7.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
config = "./pyproject.toml"
force-exclude = "^/\\{\\{ cookiecutter\\.repository_name \\}\\}/pyproject\\.toml$"

[tool.coverage.paths]
source = ["hooks", "src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
show_missing = true

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["{{ cookiecutter.repository_name }}/*", "tests/*"]

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
addopts = ["-vv", "--doctest-modules", "--keep-baked-projects"]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = ["./tests"]
