[tool.poetry]
name = "{{ cookiecutter.repository_name }}"
version = "{{ cookiecutter.release }}"
description = "{{ cookiecutter.description }}"
{% if cookiecutter.license == "MIT" -%}
license = "MIT"
{% elif cookiecutter.license == "GNU GPL" -%}
license = "GPL-3.0-or-later"
{% else -%}
license = "Proprietary"
{% endif -%}
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
maintainers = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.md"
homepage = "https://{{ cookiecutter.remote_username }}.github.io/{{ cookiecutter.repository_name }}"
repository = "https://github.com/{{ cookiecutter.remote_username }}/{{ cookiecutter.repository_name }}"
documentation = "https://{{ cookiecutter.remote_username }}.github.io/{{ cookiecutter.repository_name }}"
keywords = []
classifiers = []
packages = [
    {include = "{{ cookiecutter.package_name }}", from = "src"},
]
include = []
exclude = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.ci-cd]
optional = true

[tool.poetry.group.ci-cd.dependencies]
nox = "^2023.4.22"
nox-poetry = "^1.0.3"

[tool.poetry.group.cookiecutter]
optional = true

[tool.poetry.group.cookiecutter.dependencies]
cookiecutter = "^2.3.0"
cruft = {extras = ["pyproject"], version = "^2.15.0"}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = {extras = ["linkify"], version = "^2.0.0"}
pydata-sphinx-theme = "^0.13.3"
Sphinx = "^7.0.1"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyterlab = "^4.0.2"

[tool.poetry.group.pre-commit]
optional = true

[tool.poetry.group.pre-commit.dependencies]
black = "^23.3.0"
detect-secrets = "^1.4.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.6.5"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
nbqa = "^1.7.0"
nbstripout = "^0.6.1"
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
safety = "^2.3.5"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest = "^7.3.2"
pytest-cookies = "^0.7.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
fail_under = 90
show_missing = true

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
addopts = ["-vv", "--doctest-modules"]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = ["./tests"]
